Make Go to Dashboard more prominent + fix collapsed navbar

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,3 +1,5 @@
+/* Way too much CSS in here, particularly for Bootstrap collapsable navbar
+   Need to redo */
 .nav {
   display: flex;
   width: 100%;
@@ -56,6 +58,12 @@
   color: white;
 }
 
+.rightNav {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
 .signInBtn {
   background-color: white;
   color: var(--gray-700);
@@ -93,6 +101,46 @@
     border-radius: 1rem;
     padding: 1rem;
   }
+
+  .rightNav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navLink {
+    color: white;
+    border-bottom: 0px;
+  }
+
+  .activeNavLink,
+  .navLink:hover {
+    color: white;
+    font-weight: 600;
+    border-bottom: 0px;
+  }
+
+  .signInBtn {
+    border: 0px;
+    padding: 0;
+    color: white;
+    background-color: var(--newtBlue-700);
+  }
+
+  .signInBtn:hover {
+    background-color: var(--newtBlue-700);
+    color: white;
+    font-weight: 600;
+  }
+
+  .landingSignInBtn {
+    background-color: var(--newtBlue-700);
+  }
+
+  .landingSignInBtn:hover {
+    background-color: var(--newtBlue-700);
+    color: white;
+    font-weight: 600;
+  }
 }
 
 @media screen and (min-width: 640px) {
@@ -117,6 +165,14 @@
     margin-right: 1rem;
     font-size: var(--FS-base);
   }
+}
+
+.logout {
+  font-size: var(--FS-base);
+  cursor: pointer;
+}
+.logout:hover {
+  border-bottom: 0px;
 }
 
 @media screen and (min-width: 1440px) {
